# class_automl_exampel

./: Makefile  README.md  dev.ipynb  pyproject.toml
automl/: automl.py  base.py  core.py  launch_strategy.py  optim_starts.py  optimize_strategy.py  tf_wrap.py
src/: train.py
src/components/data/: extract_country.py  process_data.py  read_dataset.py  to_segments.py  transform_dataframe.py
src/components/model/: train_model.py
src/settings/: metadata.py  train_params.py
